@@ -36,7 +36,7 @@ public class SpecifyUserRecipientFilter implements RecipientFilter {
 	 */
 	@Override
 	public List<SysUser> filter(List<Object> filterCondition) {
-		List<Integer> userIds = filterCondition.stream().map(Integer.class::cast).collect(Collectors.toList());
+		List<Integer> userIds = filterCondition.stream().map(Integer.class::cast).toList();
 		return sysUserService.listByUserIds(userIds);
 	}
 
