@@ -46,7 +46,7 @@ public class CheckedFilterRender implements ICartRenderStep {
         // 将购物车到sku未选择信息过滤
         List<CartSkuVO> collect = tradeDTO.getSkuList().parallelStream()
                 .filter(i -> Boolean.TRUE.equals(i.getChecked()))
-                .collect(Collectors.toList());
+                .toList();
         tradeDTO.setSkuList(collect);
 
         // 购物车信息过滤
