@@ -82,7 +82,7 @@ public class PayRefundService {
         List<RefundModeParam> refundModeParams = payment.getRefundableInfo()
             .stream()
             .map(o -> new RefundModeParam().setPayChannel(o.getPayChannel()).setAmount(o.getAmount()))
-            .collect(Collectors.toList());
+            .toList();
         this.refundPayment(payment, refundModeParams);
 
     }
@@ -108,7 +108,7 @@ public class PayRefundService {
         // 1.获取退款参数方式，通过工厂生成对应的策略组
         List<PayWayParam> payWayParams = refundModeParams.stream()
             .map(RefundModeParam::toPayModeParam)
-            .collect(Collectors.toList());
+            .toList();
         List<AbsPayStrategy> paymentStrategyList = PayStrategyFactory.create(payWayParams);
         if (CollectionUtil.isEmpty(paymentStrategyList)) {
             throw new PayUnsupportedMethodException();
@@ -228,7 +228,7 @@ public class PayRefundService {
     public void saveRefund(Payment payment, BigDecimal amount, List<RefundModeParam> refundModeParams) {
         List<RefundableInfo> refundableInfos = refundModeParams.stream()
             .map(RefundModeParam::toRefundableInfo)
-            .collect(Collectors.toList());
+            .toList();
         HttpServletRequest request = WebServletUtil.getRequest();
         String ip = ServletUtil.getClientIP(request);
         RefundRecord refundRecord = new RefundRecord().setRefundRequestNo(AsyncRefundLocal.get())
