@@ -46,7 +46,7 @@ public class WeChatArticleService {
     public PageResult<WeChatArticleDto> page(PageQuery PageQuery) {
         val freePublishService = wxMpService.getFreePublishService();
         val result = freePublishService.getPublicationRecords(PageQuery.start(), PageQuery.getSize());
-        val items = result.getItems().stream().map(WeChatArticleDto::init).collect(Collectors.toList());
+        val items = result.getItems().stream().map(WeChatArticleDto::init).toList();
         PageResult<WeChatArticleDto> pageResult = new PageResult<>();
         pageResult
                 .setCurrent(PageQuery.getCurrent())
