@@ -71,7 +71,7 @@ public class WeChatUserService {
         // openId 分组 每组 100个 openid
         List<List<String>> openIdsList = CollUtil.split(wxMpUserList.getOpenids(), SIZE).stream()
                 .filter(CollUtil::isNotEmpty)
-                .collect(Collectors.toList());
+                .toList();
         // 处理每个分组. 调用查询用户信息
         for (List<String> openIdList : openIdsList) {
             log.info("开始批量获取用户信息 {}", openIdList);
